--- a/src/css/ResizingHandles.scss
+++ b/src/css/ResizingHandles.scss
@@ -6,10 +6,6 @@
   top: 2px;
   cursor: ew-resize;
   opacity: 0;
-  &.resized {
-    width: 100vw;
-    right: -50vw;
-  }
 }
 
 .bottom-side-handle {
@@ -20,10 +16,6 @@
   left: 2px;
   cursor: ns-resize;
   opacity: 0;
-  &.resized {
-    height: 100vh;
-    bottom: -50vh;
-  }
 }
 
 .bottom-right-side-handle {
@@ -34,10 +26,12 @@
   right: -2px;
   cursor: nwse-resize;
   opacity: 0;
-  &.resized {
-    height: 100vh;
-    width: 100vw;
-    bottom: -50vh;
-    right: -50vw;
-  }
+}
+
+.resized {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
 }
